[metadata]
name = procfridge
version = 0.1.0
author = Larry Chen
author_email = larrychen@berkeley.edu
description = Fridge Data Processor for Telegraf

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.9

[options.entry_points]
console_scripts = 
    procfridge = procfridge.app:main

[options.packages.find]
where = src