[metadata]
name = cryometrics
version = 0.1.0
author = Larry Chen
author_email = larrychen@berkeley.edu
description = Utility for collecting metrics from dilution refrigerators

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.9
install_requires =
    typer==0.4.0
    loguru>=0.5.3,<0.6
    attrs>=21.2.0
    pyyaml>=6.0

[options.entry_points]
console_scripts = 
    cryometrics = cryometrics.app:main

[options.packages.find]
where = src